Add password grant type in passport
