# routes/api.php
@@ -2,12 +2,17 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\DataController;
 use App\Http\Controllers\SiteController;
 use App\Http\Controllers\GroupController;
 use App\Http\Controllers\OrderController;
 use App\Http\Controllers\PointController;
 use App\Http\Controllers\DeviceController;
+
+
+Route::post('register' , [AuthController::class , 'register']);
+Route::post('login' , [AuthController::class , 'login']);
 
 Route::controller(SiteController::class)->middleware('client')->group(function () {
     Route::get('/sites', 'index');
@@ -17,7 +22,7 @@ Route::controller(SiteController::class)->middleware('client')->group(function (
     Route::delete('/sites/{id}', 'destroy');
 });
 
-Route::controller(GroupController::class)->group(function () {
+Route::controller(GroupController::class)->middleware('client')->group(function () {
     Route::get('/groups', 'index');
     Route::post('/groups', 'store');
     Route::get('/groups/{id}', 'show');
@@ -25,7 +30,7 @@ Route::controller(GroupController::class)->group(function () {
     Route::delete('/groups/{id}', 'destroy');
 });
 
-Route::controller(PointController::class)->group(function () {
+Route::controller(PointController::class)->middleware('client')->group(function () {
     Route::get('/points', 'index');
     Route::post('/points', 'store');
     Route::get('/points/{id}', 'show');
@@ -33,7 +38,7 @@ Route::controller(PointController::class)->group(function () {
     Route::delete('/points/{id}', 'destroy');
 });
 
-Route::controller(DataController::class)->group(function () {
+Route::controller(DataController::class)->middleware('client')->group(function () {
     Route::get('/data', 'index');
     Route::post('/data', 'store');
     Route::get('/data/{id}', 'show');
@@ -41,7 +46,7 @@ Route::controller(DataController::class)->group(function () {
     Route::delete('/data/{id}', 'destroy');
 });
 
-Route::controller(DeviceController::class)->group(function () {
+Route::controller(DeviceController::class)->middleware('client')->group(function () {
     Route::get('/devices', 'index');
     Route::post('/devices', 'store');
     Route::get('/devices/{id}', 'show');
@@ -49,7 +54,7 @@ Route::controller(DeviceController::class)->group(function () {
     Route::delete('/devices/{id}', 'destroy');
 });
 
-Route::controller(OrderController::class)->group(function () {
+Route::controller(OrderController::class)->middleware('client')->group(function () {
     Route::get('/orders', 'index');
     Route::post('/orders', 'store');
     Route::get('/orders/{id}', 'show');
